--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-	<div class="main">
-		<div class="round" id="diva"></div>
-		<div class="round" id="divb"></div>
-		<div class="round" id="divc"></div>
+	<div class="container">
+		<div class="green" ></div>
+		<div class="yellow" ></div>
+		<div class="red" ></div>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
