--- a/main.html
+++ b/main.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>To-Do App</title>
 </head>
 
 <body>
-	<div class="container">
-		<div class="green" ></div>
-		<div class="yellow" ></div>
-		<div class="red" ></div>
-	</div>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container">
+    <div id="green"></div>
+    <div id="yellow"></div>
+    <div id="red"></div>
+  </div>
 
+  <script src="./script.js"></script>
 </body>
 
 </html>
