--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 
 <body>
   <div class="container">
-    <div id="green"></div>
-    <div id="yellow"></div>
-    <div id="red"></div>
+    <div class="green"></div>
+    <div class="yellow"></div>
+    <div class="red"></div>
   </div>
 
   <script src="./script.js"></script>
